<resources>
    <string name="app_name">OpaynKidsApp</string>
    <string name="invalidurl">Invalid url</string>
    <string name="nointernet">Internet Connection is not available</string>
    <string name="unauthrised">Session expired Please Login to continue</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_any_account">Don\'t have any Account</string>

    <string name="v_entermsg">Please enter message</string>
    <string name="v_enterissue">Please enter subject</string>
    <string name="v_username">Please enter full name</string>
    <string name="v_name">Please enter  name</string>
    <string name="v_email">Please enter email</string>
    <string name="v_selctservice">Please select service</string>
    <string name="v_validemail">Please enter valid email</string>
    <string name="v_password">Please enter password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="passwordlength">Password must contain atleast 6 characters</string>
    <string name="phonelength">Phone Number must contain atleast 10 Digits</string>
    <string name="v_confirmpassword">Please enter confirm password</string>
    <string name="passwordnotmatch">Password does not match</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_6_digit_code_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with <font color='#F6265F'>4-digit code </font>to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="v_code">Please enter code </string>
    <string name="valid_code">Please enter valid code </string>
    <string name="please_enter_the_6_digit_code_receive_by_email">Please enter the <font color='#F6265F'>4-digit code </font> receive by Email.</string>
    <string name="email">Email</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="done">Done</string>
    <string name="kids_login">Kids Login</string>
    <string name="congratulation">Congratulation</string>
    <string name="logn_des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which  look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there   anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,</string>
    <string name="logn_des1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which  look even slightly believable.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_subject_selection">SubjectSelectionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alphabet">Alphabets</string>
    <string name="numbers">Numbers</string>
    <string name="colors">Colors</string>
    <string name="shapes">Shapes</string>
    <string name="animals">Animals</string>
    <string name="objects">Objects</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="somthingwentwrong">Something went wrong</string>
    <string name="matching_test">Matching Test</string>

</resources>