<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.app.opaynkidsapp.viewmodel.OtpVerifyViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.Login">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llotpcontainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_25sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/regularfont"
                    android:id="@+id/tvcodehint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/please_enter_the_6_digit_code_receive_by_email"
                    android:textColor="@color/black_9"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo" />

                <View
                    android:id="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/tvcodehint"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvtitle"
                    style="@style/boldfont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter your Code"
                    android:textColor="@color/black_9"
                    android:textSize="@dimen/_22sdp"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <View
                    android:id="@+id/view1"
                    app:layout_constraintTop_toBottomOf="@+id/tvtitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/codelayout"
                    style="@style/materialStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/view1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    android:textColorHint="@color/black_2"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etcode"
                        style="@style/edittextlogintitle"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/enter_code"
                        android:inputType="number"
                        android:maxLength="4"
                        />
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvreset"
                    style="@style/semiboldfont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/resend_code"
                    android:textAlignment="textEnd"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintTop_toBottomOf="@+id/codelayout"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginbutton"
                    style="@style/mainbutton"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toBottomOf="@+id/tvreset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
